restructuring of batching into record PatientBatch